fixes alignment of top-greeting

--- a/styles/input.scss
+++ b/styles/input.scss
@@ -1200,10 +1200,6 @@ p.desc {
         left: 17.5%;
     }
 
-    .top-greeting {
-        width: 60%;
-    }
-
     .skill-item {
         width: 7rem;
     }
